--- a/css/index.css
+++ b/css/index.css
@@ -25,6 +25,7 @@ body {
 }
 
 .slide-content {
+  align-items: center;
   flex-grow: 1;
 }
 
@@ -39,16 +40,17 @@ body {
 
 .slide-nav-button {
   transition: all 0.1s;
-
+  width: 130px;
+  height:50px;
+  text-align:center;
   padding: 0;
   margin: 1rem;
-  width: 4rem;
-  height: 3rem;
   border: 1px solid #888;
   border-radius: 0.25rem;
-
-  background-color: #eee;
-  font-size: 1.5em;
+  text-shadow: 1px 1px black;
+  color:white;
+  background-color: #6495ED;
+  font-size: 20px;
 }
 
 .slide-nav-button:hover {
