--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,18 @@
 body {
   display: flex;
-
   margin: 0;
-  border-width: 0;
   box-sizing: border-box;
-  height: 100vh;
-
+  min-height:100vh;
+  flex-direction:column;
   font-family: 'Open Sans', sans-serif;
 }
 
 .map {
-  width: 100%;
+  flex-grow:1;
+}
+.content{
+  flex-grow: 1;
+  display:flex;
 }
 
 .slide-section {
@@ -72,4 +74,21 @@ body {
 }
 .slide-Total_events{
   display:inline;
+}
+.navbar-brand {
+  padding: 1rem;
+  left: 0px;
+  width: 100%;
+  margin: auto;
+  top: 0;
+  height: 10%;
+  overflow-y: auto;
+  font-size: 16px;
+  background-image: linear-gradient(to right, rgb(65, 105, 225), rgb(100, 149, 237));
+  opacity: 0.95;
+  color: #6495ED ;
+  text-transform: uppercase;
+  font-size: 1rem;
+  letter-spacing: 0.1rem;
+  font-weight: 700;
 }
