--- a/exercise/template/index.html
+++ b/exercise/template/index.html
@@ -1,36 +1,44 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>Story</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;1,400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
-</head>
-<body>
-  <div class="map" id="map"></div>
-
-  <div class="slide-section">
-    <div class="slide-controls">
-      <label for="jump-to-slide">Jump&nbsp;To:</label>
-      <select class="slide-nav-select" id="jump-to-slide"></select>
+<!DOCTYPE html>
+<html>
+  <head>
+    <!-- CSS Imports -->
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <!-- Sidebar -->
+    <div class="sidebar">
+      <!-- =====================
+      Add elements in this space
+      ====================== -->
+      <h1 id="title">Orange County 2020 Census CBO Landscape</h1>
+      <h2 id="subtitle">Overview</h2>
+      <p id="content">The map to the right displays the number of community-based organizations (CBOs) that conducted outreach activities for the 2020 Census by city. The following slides highlight the cities where the most CBOs held events, passed out flyers, canvassed. etc.. This story map intends to inform these organizations of other work that's being done in their shared service area(s) and should be utilized to form strong networks for futureorganizing movements. The data used to generate this app was provided by Charitable Ventures through the Good Work Collaborative. For a more detailed analysis, please visit the GWC's Census Atlas here: https://occensusatlas.com/docs/home.html</p>
+      <button class="button" id="prev">Previous</button>
+      <button class="button" id="next">Next</button>
     </div>
-    <div class="slide-title"></div>
-    <div class="slide-content"></div>
-    <div class="slide-controls">
-      <button class="slide-nav-button" id="prev-slide">⧏</button>
-      <button class="slide-nav-button" id="next-slide">⧐</button>
+    <!-- Map -->
+    <div id="map" class="map"></div>
+    <div id="legend">
+        <div id="high">Number of CBOs: > 8</div>
+        <div id="medium">Number of CBOs: 2-8</div>
+        <div id="low">Number of CBOs: 0-2 </div>
     </div>
-  </div>
 
-  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
-  <script src="https://unpkg.com/showdown@1.9.0/dist/showdown.min.js"></script>
-  <script src="js/slides.js"></script>
-  <script src="js/index.js"></script>
-</body>
+    <!--pop up-->
+    <div class="bg-modal" >
+        <div class="modal-content">
+            <img src="data/OC_GWC_Logo.png"
+            height="60"/>
+            <p>This web application visualizes the landscape of community-based organizations (CBOs) that conducted outreach during the 2020 Census in Orange County, CA. Please click the Previous and Next buttons to view the slides.</p>
+            <button class="button" id='close'> Got it!</button>
+        </div>
+    </div>
+    <!-- Javascript Imports -->
+    <script src="js/jquery-2.2.0.js"></script>
+    <script src="js/underscore.js"></script>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="js/main.js"></script>
+  </body>
 </html>
