--- a/exercise/template/index.html
+++ b/exercise/template/index.html
@@ -28,6 +28,8 @@
     </div>
   </div>
 
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lvoogdt/Leaflet.awesome-markers@2.0.2/dist/leaflet.awesome-markers.css">
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
   <script src="https://unpkg.com/showdown@1.9.0/dist/showdown.min.js"></script>
   <script src="js/slides.js"></script>
